@@ -229,8 +229,20 @@ and print_simple_out_type ppf =
       fprintf ppf "@[<hv 2>{ %a }@]"
         (print_list print_out_label (fun ppf -> fprintf ppf ";@ ")) lbls
   | Otyp_abstract -> fprintf ppf "<abstract>"
+  | Otyp_module (p, n, tyl) ->
+      do {
+          fprintf ppf "@[<1>(module %s" p;
+          let first = ref True in
+          List.iter2
+            (fun s t ->
+              let sep = if first.val then do { first.val := False; "with" } else "and" in
+              fprintf ppf " %s type %s = %a" sep s print_out_type t
+            )
+            n tyl;
+          fprintf ppf ")@]"
+      }
   | Otyp_alias _ _ | Otyp_poly _ _
-  | Otyp_arrow _ _ _ | Otyp_constr _ [_ :: _] | Otyp_module _ as ty ->
+  | Otyp_arrow _ _ _ | Otyp_constr _ [_ :: _] as ty ->
       fprintf ppf "@[<1>(%a)@]" print_out_type ty ]
   in
   print_tkind ppf
